[pocreator] Avoid divide by 0

Summary:
If a po file has no strings, the current code will divide by 0 when
trying to draw some pie charts.

This patch aborts early which falls back to a regular icon.

BUG: 412585

Test Plan:
touch empty.po
open dolphin in cwd

Reviewers: ngraham

Reviewed By: ngraham

Subscribers: ngraham

Differential Revision: https://phabricator.kde.org/D24984